--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <h4>Soporte</h4>
                 <p>Permanente en redes y aulas virtuales</p>
             </article>
-            <a href="curso.html" class="button button--inf button--blue">VER CURSO</a>
+            <a href="" class="button button--inf button--blue">VER CURSO</a>
 
         </section>
 
@@ -266,7 +266,7 @@
                         <div class="Articulos__texto">
                             <p>15/5/20</p>
                             <br>
-                            <p>Creá una Página web colgada en Internet en 10 minutos con:</p>
+                            <p>Creá una Página web colgada en Internet en 20 minutos con:</p>
                             <p>&#10003; Html, CSS, JS</p>
                             <p>&#10003; Visual Studio Code</p>
                             <p>&#10003; Git y Github</p>
@@ -284,12 +284,15 @@
     </main>
     <aside class="Aside">
         <section class="Tabs">
+
+            <!-- pestañas -->
             <ul class="Tabs__header">
                 <li class="Tabs__tab" onclick="showContent(event, 'contenidoTab1')" id="defaultActive">Abierto</li>
                 <li class="Tabs__tab" onclick="showContent(event, 'contenidoTab2')">Próximo</li>
                 <li class="Tabs__tab" onclick="showContent(event, 'contenidoTab3')">Futuros</li>
             </ul>
 
+            <!-- contenido pestaña1 -->
             <div id="contenidoTab1" class="Tabs__tab-content">
                 <h2 class="w400">
                     HTML<span class="icon-html5"></span>
@@ -306,6 +309,8 @@
                 </ul>
                 <a href="curso.html" class="Tabs__button button button--blue">VER CURSO</a>
             </div>
+
+            <!-- contenido pestaña1 -->
             <div id="contenidoTab2" class="Tabs__tab-content">
                 <h2 class="w400">
                     Webpack<span class="icon-webpack"></span>
@@ -321,6 +326,7 @@
                 </ul>
 
             </div>
+            <!-- contenido pestaña3 -->
 
             <div id="contenidoTab3" class="Tabs__tab-content">
                 <!-- <a href="http://"> -->
@@ -426,3 +432,4 @@
 </body>
 
 </html>
+
