update Hola Mundo article

--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -91,10 +91,13 @@
                 </ul>
                 <br>
                 <br>
-                <h4>1- Ingresa a tu cuenta de Github, crea un repositorio e inicializa con README</h4>
+                <h4>1- Ingresá a tu cuenta de Github, creá un repositorio, llamalo "HolaMundo" e inicializá con README</h4>
                 <div>
                     <figure>
-                        <img src="img/blog/hola-mundo/holamundoCrearRepo.png" alt="">
+                        <img src="img/new-repo.png" alt="new repo in github">
+                        <br>
+                        <br>
+                        <img src="img/create-repo.png" alt="new repo options github">
                     </figure>
                 </div>
                 <h4>2- Creá una carpeta "hola-mundo" en algún directorio de tu compu.</h4>
