update Hola Mundo article

--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -109,7 +109,7 @@
                 </h4>
                 <div>
                     <figure>
-                        <img src="img/blog/hola-mundo/open-bash.png" alt="">
+                        <img src="img/blog/hola-mundo/open-bash.PNG" alt="">
                     </figure>
                     <br>
                     <br>
@@ -167,6 +167,8 @@
                 </div>
 
                 <script src="https://gist.github.com/agustinpfs/a50fb09cd1cdc7af4c5bb29e89c58e70.js"></script>
+                <br>
+                <br>
                 <h4>10- Guardamos el documento - botón derecho sobre la carpeta del proyecto y "Open in Terminal"
                 </h4>
                 <div>
