add javascript post

--- a/blogCss.html
+++ b/blogCss.html
@@ -197,15 +197,16 @@
                         <img src="img/blog/css/content-box.png" alt="logo CSS3">
                     </figure>
                     <br>
-                    <p>En cambio, con box-sizing: border-box determina que al alto y al ancho definido del elemento incluirá los tamaños del padding y del border.
-Es decir el tamaño de la caja será igual al ancho(width) y alto(height) definido en el css.</p>
-<figure>
-    <img src="img/blog/css/border-box.png" alt="logo CSS3">
-</figure>
-<p>Ejemplos:</p>
-<div class="Post__gist">
-    <script src="https://gist.github.com/agustinpfs/dff5fe33d3982b578daf871d8f9f3d0f.js"></script>
-</div>
+                    <p>En cambio, con box-sizing: border-box determina que al alto y al ancho definido del elemento incluirá los tamaños del
+                        padding y del border.
+                        Es decir el tamaño de la caja será igual al ancho(width) y alto(height) definido en el css.</p>
+                    <figure>
+                        <img src="img/blog/css/border-box.png" alt="logo CSS3">
+                    </figure>
+                    <p>Ejemplos:</p>
+                    <div class="Post__gist">
+                        <script src="https://gist.github.com/agustinpfs/dff5fe33d3982b578daf871d8f9f3d0f.js"></script>
+                    </div>
 
 
                     
