update javascript & html posts

--- a/blogHtml.html
+++ b/blogHtml.html
@@ -110,12 +110,11 @@
                 <p>HTML es el archivo más básico de una página web y en el definiremos su estructura y alojaremos la
                     información que
                     contendrá (texto, enlaces, imágenes, vídeos, audios, etc).</p>
-                <p>Para ello utilizaremos las etiquetas (tags) que determinan los elementos que conforman la escritura
-                    de un archivo
-                    HTML.
-                    Por lo general los elementos HTML se determinan como pares de etiquetas (apertura y cierre). Se definen entre los signos
+                <p>Para ello utilizaremos las etiquetas (tags) que se encargan de clasificar y guardar la información
+                    en un archivo HTML.
+                    Por lo general los elementos HTML (tags) se determinan como pares de etiquetas (apertura y cierre). Se definen entre los signos
                     “menor que” (<) y “mayor que” (>).
-                    La etiqueta de cierra lleva una barra antes del nombre:<br>
+                    La etiqueta de cierre lleva una barra antes del nombre:<br>
                     Apertura -> <span class="Post__code">&lt;nombre-etiqueta&gt;</span><br>
                     Cierre -> <span class="Post__code">&lt;/nombre-etiqueta&gt;</span> (algunos elementos no llevan etiqueta de cierre)
                 </p>
