update twitter widgets

--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -380,10 +380,9 @@
                 <!-- </a> -->
             </div>
         </section>
-        <section class="Aside-twitter">
-            <a class="twitter-timeline" data-tweet-limit=3
-                href="https://twitter.com/TwitterDev/timelines/539487832448843776">National Park Tweets - Curated tweets
-                by TwitterDev</a>
+        <section class="Social-timeline">
+            <a class="twitter-timeline" data-theme="dark"
+                href="https://twitter.com/cursosit_ok?ref_src=twsrc%5Etfw">Tweets by cursosit_ok</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </section>
         <section class="Acordeon">
