change logo without arrow

--- a/blogHtml.html
+++ b/blogHtml.html
@@ -23,7 +23,7 @@
 <body>
     <header class="Header">
         <figure class="Header__figure">
-            <img src="images/logo.png" alt="logo cursosIT">
+            <img src="img/logo.png" alt="logo cursosIT">
         </figure>
         <nav class="Header__nav">
             <label for="menu" class="Header__button">
@@ -191,7 +191,7 @@
                 </div>
                 <p>En navegador:</p>
                 <figure>
-                    <img src="img/blog/html/images.png" alt="vista de br (salto de línea) en el navegador">
+                    <img src="img/blog/html/images.png" alt="vista de img en el navegador">
                 </figure>
                 <h3>Links <small>(línea)</small></h3>
                 <p>Define un enlace, el atributo “href” indica el destino de la página.</p>
