--- a/blogSlack.html
+++ b/blogSlack.html
@@ -24,7 +24,7 @@
 <body>
     <header class="Header">
         <figure class="Header__figure">
-            <img src="images/logo.png" alt="logo cursosIT">
+            <img src="img/logo.png" alt="logo cursosIT">
         </figure>
         <nav class="Header__nav">
             <label for="menu" class="Header__button">
