update html post

--- a/blogHtml.html
+++ b/blogHtml.html
@@ -184,7 +184,7 @@
                     <img src="img/blog/html/br.png" alt="vista de br (salto de línea) en el navegador">
                 </figure>
                 <h3>Imágenes <small>(línea)</small></h3>
-                <p><span class="Post__code">&lt;img src="ruta" alt=""a&gt;</span></p>
+                <p><span class="Post__code">&lt;img src="ruta" alt=""&gt;</span></p>
                 <p>Ejemplo:</p>
                 <div class="Post__gist">
                     <script src="https://gist.github.com/agustinpfs/fa30eb873f5b85e2ae6d57d83a22b2e7.js"></script>
