update html post

--- a/blogHtml.html
+++ b/blogHtml.html
@@ -230,7 +230,7 @@
                     <li>contenido principal <span class="Post__code">&lt;main&gt;&lt;/main&gt;</span></li>
                     <li>articulo <span class="Post__code">&lt;article&gt;&lt;/article&gt;</span></li>
                     <li>sección <span class="Post__code">&lt;section&gt;&lt;/section&gt;</span></li>
-                    <li>división <span class="Post__code">&lt;div&gt;&lt;/div&gt;</span></li>
+                    <!-- <li>división <span class="Post__code">&lt;div&gt;&lt;/div&gt;</span></li> -->
                     <li>sidebar (barra lateral) <span class="Post__code">&lt;aside&gt;&lt;/aside&gt;</span></li>
                     <li>pie de página <span class="Post__code">&lt;footer&gt;&lt;/footer&gt;</span></li>
                 </ul>
