update css and html posts

--- a/blogCss.html
+++ b/blogCss.html
@@ -197,7 +197,7 @@
                         <img src="img/blog/css/content-box.png" alt="logo CSS3">
                     </figure>
                     <br>
-                    <p>En cambio, con box-sizing: border-box determina que al alto y al ancho definido del elemento incluirá los tamaños del
+                    <p>En cambio, con <span class="Post__code">box-sizing: border-box</span> determina que al alto y al ancho definido del elemento incluirá los tamaños del
                         padding y del border.
                         Es decir el tamaño de la caja será igual al ancho(width) y alto(height) definido en el css.</p>
                     <figure>
