--- a/blogHtml.html
+++ b/blogHtml.html
@@ -221,9 +221,9 @@
                     pantalla).</p>
                 </p>
 
-                <h2>Semántica</h2>
-                <p>En nuestro archivo HTML utilizaremos determinadas etiquetas que señalan el contenido. Por ejemplo:
-                </p>
+                <h2>Etiquetas semánticas</h2>
+                <!-- <p>En nuestro archivo HTML utilizaremos determinadas etiquetas que señalan el contenido. Por ejemplo:
+                </p> -->
                 <ul class="Post__semantica">
                     <li>encabezado <span class="Post__code">&lt;header&gt;&lt;/header&gt;</span></li>
                     <li>menú de navegación <span class="Post__code">&lt;nav&gt;&lt;/nav&gt;</span></li>
@@ -239,7 +239,7 @@
                 <p>Estas etiquetas son de carácter semántico, el comportamiento del contenido de estas etiquetas no
                     varía, es decir un html escrito con estas etiquetas tiene el mismo comportamiento si todas las
                     etiquetas fueran “divs” &lt;div&gt;.</p>
-                <p>Pero utilizar esta semántica ayuda a la legibilidad del código, a la accesibilidad para los usuarios
+                <p>Pero utilizar estas etiquetas ayuda a la legibilidad del código, a la accesibilidad para los usuarios
                     con limitaciones visuales (lectores de pantalla) y pueden incidir en los resultados de búsqueda por
                     parte de los motores de búsqueda.</p>
             </div>
