--- a/curso.html
+++ b/curso.html
@@ -85,44 +85,119 @@
                 </div>
             </section>
             <section class="Programa">
-                <h3>Programa - 8 clases - 20 hs</h3>
-                <h4 id="desplegado" class="Programa__button">1º clase</h4>
+                <h3>Temario - 18 clases - 36 hs</h3>
+                <h4 id="desplegado" class="Programa__button">Introductorio</h4>
                 <ul class="Programa__contenido">
-                    <li><strong>Introducción</strong></li>
-                    <li>&#45; git/github</li>
-                    <li>&#45; Slack</li>
-                    <li>&#45; Gestión de proyecto</li>
-                    <li>&#45; Wireframes</li>
+                    <!-- <li><strong>Introducción</strong></li> -->
+                    <li>&#45; Introducción</li>
+                    <!-- <li><strong>Introducción</strong></li> -->
                     <li>&#45; Ambiente de desarrollo</li>
+                    <li>&#45; Wireframes</li>
                 </ul>
-                <h4 class="Programa__button">2º clase</h4>
+                <h4 class="Programa__button">HTML</h4>
                 <ul class="Programa__contenido">
-                    <li><strong>Html</strong></li>
+                    <!-- <li><strong>Html</strong></li> -->
+                    <li>&#45; ¿Qué es HTML?</li>
                     <li>&#45; Estructura</li>
-                    <li>&#45; Semántica</li>
                     <li>&#45; Etiquetas</li>
                     <li>&#45; Atributos</li>
-                    <li>&#45; Estructura Html del proyecto</li>
+                    <li>&#45; Semántica</li>
                 </ul>
-                <h4 class="Programa__button">3º clase</h4>
+                <h4 class="Programa__button">CSS</h4>
                 <ul class="Programa__contenido">
-                    <li><strong>Css</strong></li>
+                    <!-- <li><strong>Css</strong></li> -->
+                    <li>&#45; ¿Qué es CSS?</li>
                     <li>&#45; Sintaxis</li>
+                    <li>&#45; Declaración de estilos</li>
                     <li>&#45; Selectores</li>
-                    <li>&#45; Metodología BEM (Convención para la escritura de CSS)</li>
-                    <li>&#45; Responsive Design</li>
+                    <li>&#45; Propiedades</li>
                     <li>&#45; Box Model</li>
                     <li>&#45; Flexbox</li>
+                    <li>&#45; Metodología BEM (Convención para la escritura de CSS)</li>
+                    <li>&#45; Colores web</li>
+                    <li>&#45; Pseudoclases</li>
                     <li>&#45; Fuentes-Íconos</li>
+                    <li>&#45; Posisiones absolutas y relativas</li>
+                    <li>&#45; Responsive Design</li>
                 </ul>
-                <h4 class="Programa__button">4º clase</h4>
+                <h4 class="Programa__button">Javascript</h4>
                 <ul class="Programa__contenido">
-                    <li><strong>Javascript</strong></li>
+                    <!-- <li><strong>Javascript</strong></li> -->
+                    <li>&#45; ¿Qué es Javascript?</li>
+                    <li>&#45; Variables</li>
                     <li>&#45; Tipos de Datos</li>
-                    <li>&#45; Loops</li>
+                    <li>&#45; Funciones</li>
                     <li>&#45; Condicionales</li>
+                    <li>&#45; Operadores</li>
+                    <li>&#45; Arrays</li>
+                    <li>&#45; Loops</li>
+                    <li>&#45; Objetos y métodos</li>
                     <li>&#45; Dom</li>
                 </ul>
+                <h4 class="Programa__button">Control de versiones</h4>
+                <ul class="Programa__contenido">
+                    <!-- <li><strong>Javascript</strong></li> -->
+                    <li><strong>Git</strong></li>
+                    <li>&#45; Concepto</li>
+                    <li>&#45; Configuración</li>
+                    <li>&#45; Comandos</li>
+                    <li><strong>Github</strong></li>
+                    <li>&#45; Concepto</li>
+                    <li>&#45; Repositorios</li>
+                    <li>&#45; Conexión con Git</li>
+                    <li>&#45; Issues</li>
+                    <li>&#45; Milestones</li>
+                </ul>
+                <h4 class="Programa__button">Formularios y comentarios</h4>
+                <ul class="Programa__contenido">
+                    <li><strong>Formularios</strong></li>
+                    <li>&#45; Concepto</li>
+                    <li>&#45; Etiquetas</li>
+                    <li>&#45; Atributos</li>
+                    <li>&#45; Funcionalidad</li>
+                    <li>&#45; SimpleForm</li>
+                    <li><strong>Comentarios</strong></li>
+                    <li>&#45; Disqus</li>
+                    <li>&#45; Integración</li>
+                    <li>&#45; Configuración</li>
+                    <li>&#45; Administración</li>
+                </ul>
+                <h4 class="Programa__button">Extras</h4>
+                <ul class="Programa__contenido">
+                    <li><strong>Analítica web</strong></li>
+                    <li><strong>Google Analytics</strong></li>
+                    <li>&#45; Integración</li>
+                    <li>&#45; Configuración</li>
+                    <li>&#45; Administración</li>
+                    <li>&#45; Eventos</li>
+                    <li><strong>Cobros en el sitio web</strong></li>
+                    <li>&#45; Paypal</li>
+                    <li>&#45; MercadoPago</li>
+                    <li>&#45; Botón de pago</li>
+                    <li>&#45; Integración</li>
+                    <li>&#45; Configuración</li>
+                    <li>&#45; Administración</li>
+                </ul>
+                <h4 class="Programa__button">Despliegue</h4>
+                <ul class="Programa__contenido">
+                    <li>&#45; Servidores</li>
+                    <li>&#45; Hosting</li>
+                    <li>&#45; Dominios</li>
+                    <li>&#45; Contratación</li>
+                    <li>&#45; Despliegue en servidor</li>
+                </ul>
+                <h4 class="Programa__button">Proyectos</h4>
+                <ul class="Programa__contenido">
+                    <li>&#45; Portfolio</li>
+                    <li>&#45; Clon WebIT</li>
+                    <li>&#45; Sito web a un tercero</li>
+                </ul>
+                <!-- <h4 class="Programa__button">Recursos y recomendaciones</h4>
+                <ul class="Programa__contenido">
+                    <li>&#45; </li>
+                    <li>&#45; Clon WebIT</li>
+                    <li>&#45; Sito web a un tercero</li>
+                </ul> -->
 
             </section>
             <section class="Requisitos">
