add bitcoin paid button

--- a/curso.html
+++ b/curso.html
@@ -242,8 +242,9 @@
             <section class="Pago">
                 <div class="Pago__medio">
                     <h3>Elegí medio de pago</h3>
-                    <p><a href="#mpago">Mercado Pago</a> (Sólo Argentina). Pagá hasta 3 cuotas sin interés.<br><span>3900 ARS</span> (pesos argentinos). <a href="#mpago">Aplicar descuentos.</a></p>
-                    <p><a href="#paypal">Paypal</a> <span>39 USD</span> (dólares) <a href="#paypal">Aplicar descuentos.</a></p>
+                    <p><a href="#mpago">Mercado Pago</a> (Sólo Argentina). <span>3500ARS</span> (pesos argentinos).</p>
+                    <p><a href="#paypal">Paypal</a> <span>35USD</span> (dólares).</p>
+                    <p><a href="#bitcoin">Bitcoin</a> <span>0.0035BTC</span> (bitcoin).</p>
                 </div>
                 <div class="Pago__box Pago__box--1" id="mpago">
                     <figure><img src="img/MPago-horizontal-small.png" alt=""></figure>
@@ -277,6 +278,17 @@
                                     <input type="image" src="https://i.postimg.cc/1zrNQncb/boton-pago28.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                                     <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
                                 </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="Pago__box Pago__box--3" id="bitcoin">
+                    <figure><img src="img/bitcoin-logo.png" alt="" width="100"></figure>
+                    <h3 class="precios_p">0.0028BTC</h3>
+                    <h4><del>0,0035BTC</del> <span>20% desc por inscripción antes del 4/08/20</span></h4>
+        
+                    <div class="Pago__boton">
+                        <div id="test_p" class='Pago__boton1 bot'>
+                            <a href="">PAGAR <small>0.0028BTC (bitcoin)</small></a>
                         </div>
                     </div>
                 </div>
