create bitcoin-payment.html OK & bitcoin-aviso.html ok

--- a/curso.html
+++ b/curso.html
@@ -288,7 +288,7 @@
         
                     <div class="Pago__boton">
                         <div id="test_p" class='Pago__boton1 bot'>
-                            <a href="">PAGAR <small>0.0028BTC (bitcoin)</small></a>
+                            <a href="bitcoin-payment.html">PAGAR <small>0.0028BTC (bitcoin)</small></a>
                         </div>
                     </div>
                 </div>
