add whatsapp icon & home link in posts footer

--- a/blogCss.html
+++ b/blogCss.html
@@ -329,9 +329,10 @@
         </section>
         <nav class="Footer-nav">
             <ul>
+                <li><a href="index.html">home</a></li>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="#scrollLink1">cursos</a></li>
-                <li><a href="#section1">blog</a></li>
+                <li><a href="index.html#scrollLink1">cursos</a></li>
+                <li><a href="index.html#section1">blog</a></li>
             </ul>
         </nav>
         <section class="Footer-social">
