--- a/blogHolaMundo.html
+++ b/blogHolaMundo.html
@@ -409,12 +409,15 @@
         </section>
         <nav class="Footer-nav">
             <ul>
+                <li><a href="index.html">home</a></li>
                 <li class="opencontact2"><a href="javascript:void(0)">contacto</a></li>
-                <li><a href="#scrollLink1">cursos</a></li>
-                <li><a href="#section1">blog</a></li>
-            </ul>
+                <li><a href="index.html#scrollLink1">cursos</a></li>
+                <li><a href="index.html#section1">blog</a></li>            </ul>
         </nav>
         <section class="Footer-social">
+            <a href="https://wa.me/543513044157" target="_blank" rel="noopener noreferrer">
+                <span class="icon-whatsapp"></span>
+            </a>
             <a href="https://www.facebook.com/Cursos-IT-101125784951053" target="_blank" rel="noopener noreferrer">
                 <span class="icon-facebook"></span>
             </a>
