--- a/index.html
+++ b/index.html
@@ -393,6 +393,9 @@
             </ul>
         </nav>
         <section class="Footer-social">
+            <a href="https://wa.me/543513044157" target="_blank" rel="noopener noreferrer">
+                <span class="icon-whatsapp"></span>
+            </a>
             <a href="https://www.facebook.com/Cursos-IT-101125784951053" target="_blank" rel="noopener noreferrer">
                 <span class="icon-facebook"></span>
             </a>
