--- a/index.html
+++ b/index.html
@@ -281,6 +281,64 @@
                 </article>
             </div>
         </section>
+        <section id="section1" class="Articulos Articulos--blog">
+            <!-- <h2 class="Articulos__title">Blog</h2> -->
+            <div class="Articulos__links">
+                <article>
+                    <!-- position relative para posisionar absolute al hijo     width-->
+                    <div class="Articulos__layerHover">
+                        <!-- capa que aparece al hacer hover azul mas claro -->
+                        <div class="Articulos__texto">
+                            <!-- efecto de arriba hacia abajo -->
+                            <p>15/5/20</p>
+                            <br>
+                            <!-- <p>Slack es una herramienta de comunicación en equipo que trabaja con un 
+                                simple sistema de canales según el tema de conversación.</p> -->
+                            <p>Descubre para que sirve Slack y los beneficios de trabajar en equipo con esta herramienta
+                            </p>
+                            <a href="blogSlack.html" class="Articulos__button">ENTRAR</a>
+                        </div>
+                    </div>
+                    <figure>
+                        <img src="img/html-blog.png" alt="">
+                        <h3>¿Qué es HTML?</h3>
+                    </figure>
+                </article>
+                <article>
+                    <div class="Articulos__layerHover">
+                        <div class="Articulos__texto">
+                            <p>15/5/20</p>
+                            <br>
+                            <p>22 atajos y utilidades de Visual Studio Code para simplificarte la vida.</p>
+                            <a href="blogVSCode.html" class="Articulos__button">ENTRAR</a>
+                            <!-- <a href="#" class="button">VER CURSO</a> -->
+                        </div>
+                    </div>
+                    <figure>
+                        <img src="img/css-blog.png" alt="">
+                        <h3>¿Qué es CSS?</h3>
+                    </figure>
+                </article>
+                <article>
+                    <div class="Articulos__layerHover">
+                        <div class="Articulos__texto">
+                            <p>15/5/20</p>
+                            <br>
+                            <p>Creá una Página web colgada en Internet en 20 minutos con:</p>
+                            <p>&#10003; Html, CSS, JS</p>
+                            <p>&#10003; Visual Studio Code</p>
+                            <p>&#10003; Git y Github</p>
+                            <a href="blogHolaMundo.html" class="Articulos__button">ENTRAR</a>
+                            <!-- <a href="article1.html" class="button">VER CURSO</a> -->
+                        </div>
+                    </div>
+                    <figure>
+                        <img src="img/js-blog.png" alt="">
+                        <h3>¿Qué es Javascript</h3>
+                    </figure>
+                </article>
+            </div>
+        </section>
     </main>
     <aside class="Aside">
         <section class="Tabs">
