--- a/curso.html
+++ b/curso.html
@@ -13,7 +13,9 @@
 <body>
     <header class="Header">
         <figure class="Header__figure">
-            <img src="img/logo.png" alt="logo cursosIT">
+            <a href="index.html">
+                <img src="img/logo.png" alt="logo cursosIT">
+            </a>
         </figure>
         <nav class="Header__nav">
             <label for="menu" class="Header__button">
