--- a/blogHtml.html
+++ b/blogHtml.html
@@ -245,6 +245,19 @@
                     con limitaciones visuales (lectores de pantalla) y pueden incidir en los resultados de búsqueda por
                     parte de los motores de búsqueda.</p>
             </div>
+            <div class="Post__recommended">
+                <h3>Articulos recomendados</h3>
+                <br>
+                <a href="blogCss.html">¿Qué es CSS?</a><br>
+                <a href="blogJs.html">¿Qué es Javascript?</a><br>
+                <a href="blogVSCode.html">Atajos de teclado Visual Studio Code.</a><br>
+                <a href="blogHolaMundo.html">Hola Mundo con HTML + CSS + Javascript + Publicación en Internet.</a>
+                <br>
+                <br>
+                <h3>Curso</h3>
+                <a href="curso.html">Desarrollo Web con HTML, CSS y Javascript</a><br>
+
+            </div>
 
             <div id="disqus_thread"></div>
             <script>
