--- a/blogCss.html
+++ b/blogCss.html
@@ -224,6 +224,18 @@
 
 
             </div>
+            <div class="Post__recommended">
+                <h3>Articulos recomendados</h3>
+                <a href="blogHtml.html">¿Qué es HTML?</a><br>
+                <a href="blogJs.html">¿Qué es Javascript?</a><br>
+                <a href="blogVSCode.html">Atajos de teclado Visual Studio Code.</a><br>
+                <a href="blogHolaMundo.html">Hola Mundo con HTML + CSS + Javascript + Publicación en Internet.</a>
+                <br>
+                <br>
+                <h3>Curso</h3>
+                <a href="curso.html">Desarrollo Web con HTML, CSS y Javascript</a><br>
+            </div>
+
 
             <div id="disqus_thread"></div>
             <script>
