--- a/blogJs.html
+++ b/blogJs.html
@@ -236,7 +236,19 @@
                         <p><b>random()</b>: devuelve un número aleatorio entre 0 y 1</p>
                         <p> <span class="Post__code">console.log(Math.random()); <span class="greenpure">// 0.42499662557833595</span></span>
             </div>
+            <div class="Post__recommended">
+                <h3>Articulos recomendados</h3>
+                <br>
+                <a href="blogHtml.html">¿Qué es HTML?</a><br>
+                <a href="blogCss.html">¿Qué es CSS?</a><br>
+                <a href="blogVSCode.html">Atajos de teclado Visual Studio Code.</a><br>
+                <a href="blogHolaMundo.html">Hola Mundo con HTML + CSS + Javascript + Publicación en Internet.</a>
+                <br>
+                <br>
+                <h3>Curso</h3>
+                <a href="curso.html">Desarrollo Web con HTML, CSS y Javascript</a><br>
 
+            </div>
             <div id="disqus_thread"></div>
             <script>
 
