--- a/welcome.html
+++ b/welcome.html
@@ -29,9 +29,21 @@
 <body>
     <main>
         <h1>BIENVENIDO al curso de Desarrollo Web de CursosIT</h1>
+        <br>
+        <div>
+            <h3>Tareas</h3>
+            <ul>
+                <li>Abrir una cuenta en <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Github.</a></li>
+                <li>Tener instalado <a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer">Visual Studio Code</a>.</li>
+                <li>Tener instalado <a href="https://slack.com/intl/es-ar/downloads/" target="_blank" rel="noopener noreferrer">Slack</a>.</li>
+            </ul>
+        </div>
+        
+
         <p>Ya podés ingresar al grupo de Slack y acceder al material de la primera clase a través de la siguiente
             invitación</p>
-        <p>invitación slack</p>
+        <p><a href="https://join.slack.com/t/cursosit/shared_invite/zt-g0if2blz-Ksw7Nh5BcUKLG2~77JigvQ" target="_blank" rel="noopener noreferrer">
+        Invitación</a></p>
         <p>Para ver cómo funciona Slack mirá <a href="blogSlack.html">este artículo</a></p>
         <p>Dudas? <a class="opencontact" href="#">Contactá</a></p>
         <p style="visibility: hidden;">Dudas? <a class="opencontact2" href="#">Contactá</a></p>
