--- a/curso.html
+++ b/curso.html
@@ -241,7 +241,7 @@
                 <p>Martes y viernes de 16:30hs a 18hs</p>
                 <h2>QUEDAN 7 LUGARES</h2>
             </section>
-            <section class="Pago">
+            <!-- <section class="Pago">
                 <div class="Pago__medio">
                     <h3>Elegí medio de pago</h3>
                     <p><a href="#mpago">Mercado Pago</a> (Sólo Argentina). <span>3500ARS</span> (pesos argentinos).</p>
@@ -295,7 +295,7 @@
                     </div>
                 </div>
         
-            </section>
+            </section> -->
             <section class="Contacto Contacto--resp">
                 <h2>Dudas? Contactá!</h2>
                 <form class="Contacto__formulario"
