add whatsapp button

--- a/bitcoin-aviso.html
+++ b/bitcoin-aviso.html
@@ -28,7 +28,7 @@
 
 <body>
     <main>
-        <h1>En breve te daremos aviso del éxito de la transacción junto con las indicaciones de acceso al curso.</h1>
+        <h1>En breve te daremos aviso del éxito de la transacción junto con las indicaciones de acceso al material del curso.</h1>
         
     <br>
     <br>
@@ -36,6 +36,9 @@
         <br>
         <br>
         <a href="bitcoin-payment.html">volver</a>
+        <a class="Contacto__whatsapp" href="https://wa.me/543513044157" target="_blank" rel="noopener noreferrer">
+            <img src="img/whatsapp-logo.png" alt="contacto whatsapp">
+        </a>
     </main>
     
 </body>
