--- a/welcome.html
+++ b/welcome.html
@@ -49,6 +49,9 @@
         <p style="visibility: hidden;">Dudas? <a class="opencontact2" href="#">Contactá</a></p>
     
         <img style="margin: auto;" src="img/logo.png" alt="">
+        <a class="Contacto__whatsapp" href="https://wa.me/543513044157" target="_blank" rel="noopener noreferrer">
+            <img src="img/whatsapp-logo.png" alt="contacto whatsapp">
+        </a>
     </main>
     <div class="Modal">
         <!-- Modal content -->
